# bot

./: .gitignore  53462020  55454900  README.md  UI_full.html  access_control.json  advance_report.md  advance_requests.json  assets.json  bonuses_penalties.json  dictionary.json  imghdr.py  inventory.json  message_templates.json  messages.json  pyproject.toml  requirements.txt  salon_analytics.json  user.json  vacations.json  ~$ФОТ админы 2025.xlsm  ФОТ админы 2025.xlsm
REF/: App.tsx
REF/styles/: globals.css
admin_frontend/: README.md  install_patch1.ps1  package-lock.json  package.json  repair_all.ps1  repair_project.ps1  tailwind.config.js  vite.config.js
admin_frontend/src/: App.jsx  api.js  index.css  main.jsx
app/: __init__.py  __main__.py  bot.py  config.py  constants.py  desktop.py  main.py  server.py  settings.py
app/api/: __init__.py  adjustments.py  admin_ui.py  analytics.py  assets.py  auth.py  birthdays.py  config.py  dependencies.py  dictionary.py  salary.py  (+9 more)
logs/: sent_messages.json
static/: analytics.js
telegram/: __init__.py
tests/: test_access_control_service.py  test_constants.py  test_dictionary_service.py  test_employee_profile_pdf.py  test_employee_service.py  test_inventory_service.py  test_map_employee_by_code.py  test_payment_request_pattern.py  test_payout_service.py  test_payout_structure.py  test_sales_analytics.py  test_salon_analytics.py  test_session_auth.py  test_telegram_send_message.py  test_telegram_service.py  test_users_service.py
Парсинг/: аксы.xlsx  ключи.xlsx  обувь.xlsx  пользователи.xlsx  товары.xlsx  услуги.xlsx
(+170 files in other folders)
